--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -39,7 +39,7 @@
         <pyAnnotator implementation="security.validators.DjangoDebugModeSettingsValidator"/>
         <pyAnnotator implementation="security.validators.InsecureHashValidator"/>
         <pyAnnotator implementation="security.validators.TimingAttackValidator"/>
-
+        <pyAnnotator implementation="security.validators.DjangoMiddlewareValidator"/>
     </extensions>
     <actions>
         <action id="Security.CheckSafetyDB" class="security.packaging.SafetyDbCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
